@@ -149,7 +149,7 @@ be_derived_probe_group::emit_module_decls (systemtap_session& s)
 
   s.op->newline() << "static void enter_be_probe (struct stap_be_probe *stp) {";
   s.op->indent(1);
-  common_probe_entryfn_prologue (s, "stp->state", "stp->probe",
+  common_probe_entryfn_prologue (s, "stp->state", "", "stp->probe",
 				 "stp_probe_type_been", false);
   s.op->newline() << "(*stp->probe->ph) (c);";
   common_probe_entryfn_epilogue (s, false, otf_safe_context(s));
