@@ -366,7 +366,7 @@ procfs_derived_probe_group::emit_module_decls (systemtap_session& s)
     {
       s.op->newline() << "struct _stp_procfs_data pdata;";
 
-      common_probe_entryfn_prologue (s, "STAP_SESSION_RUNNING",
+      common_probe_entryfn_prologue (s, "STAP_SESSION_RUNNING", "",
 				     "spp->read_probe",
 				     "stp_probe_type_procfs");
 
@@ -412,7 +412,7 @@ procfs_derived_probe_group::emit_module_decls (systemtap_session& s)
     {
       s.op->newline() << "struct _stp_procfs_data pdata;";
 
-      common_probe_entryfn_prologue (s, "STAP_SESSION_RUNNING",
+      common_probe_entryfn_prologue (s, "STAP_SESSION_RUNNING", "",
 				     "spp->write_probes[0]",
 				     "stp_probe_type_procfs");
 
