@@ -136,7 +136,7 @@ timer_derived_probe_group::emit_module_decls (systemtap_session& s)
   s.op->line() << ");";
   s.op->newline(-1) << "{";
   s.op->indent(1);
-  common_probe_entryfn_prologue (s, "STAP_SESSION_RUNNING", "stp->probe",
+  common_probe_entryfn_prologue (s, "STAP_SESSION_RUNNING", "", "stp->probe",
 				 "stp_probe_type_timer");
   s.op->newline() << "(*stp->probe->ph) (c);";
   common_probe_entryfn_epilogue (s, true, otf_safe_context(s));
@@ -293,7 +293,7 @@ hrtimer_derived_probe_group::emit_module_decls (systemtap_session& s)
 
       s.op->newline() << "{";
       s.op->indent(1);
-      common_probe_entryfn_prologue (s, "STAP_SESSION_RUNNING", "stp->probe",
+      common_probe_entryfn_prologue (s, "STAP_SESSION_RUNNING", "", "stp->probe",
 				     "stp_probe_type_hrtimer");
       s.op->newline() << "(*stp->probe->ph) (c);";
       common_probe_entryfn_epilogue (s, true, otf_safe_context(s));
@@ -315,7 +315,8 @@ hrtimer_derived_probe_group::emit_module_decls (systemtap_session& s)
 
       s.op->newline() << "{";
       s.op->indent(1);
-      common_probe_entryfn_prologue (s, "STAP_SESSION_RUNNING", "stp->probe",
+      common_probe_entryfn_prologue (s, "STAP_SESSION_RUNNING", "",
+                                     "stp->probe",
 				     "stp_probe_type_hrtimer");
       s.op->newline() << "(*stp->probe->ph) (c);";
       common_probe_entryfn_epilogue (s, true, otf_safe_context(s));
@@ -483,7 +484,7 @@ profile_derived_probe_group::emit_module_decls (systemtap_session& s)
   s.op->newline() << "static void enter_all_profile_probes (struct pt_regs *regs) {";
   s.op->newline(1) << "const struct stap_probe * probe = "
                    << common_probe_init (probes[0]) << ";";
-  common_probe_entryfn_prologue (s, "STAP_SESSION_RUNNING", "probe",
+  common_probe_entryfn_prologue (s, "STAP_SESSION_RUNNING", "", "probe",
 				 "stp_probe_type_profile_timer");
   // Timer interrupts save all registers, so if the interrupt happened
   // in user space we can rely on it being the full user pt_regs.
